Change digital to computer

--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,7 @@ custom_css = ["css/custom.css"]
     bgImage = "images/slider/hero-area.jpg"
     icon = "tf-ion-play"
     heading = "Ratik Kapoor"
-    content= "Electrical and Digital Engineering Student | Schulich School of Engineering"
+    content= "Electrical and Computer Engineering Student | Schulich School of Engineering"
     btn = true
     btnText="Let's Go"
     btnURL="#about"
