Update config to point to ratik.me

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ratik.netlify.com"
+baseURL = "https://ratik.me"
 languageCode = "en-us"
 DefaultContentLanguage = "en"
 title = "Ratik Kapoor"
