Fix typo on main page

--- a/data/about.yml
+++ b/data/about.yml
@@ -11,5 +11,5 @@ aboutItem :
   content : Taking direct action where I can make a postitive impact.
 
 - icon : tf-ion-ios-pie
-  title : Resouceful
+  title : Resourceful
   content : Getting the most out of as little as possible.
