Fix more spelling issues

--- a/data/about.yml
+++ b/data/about.yml
@@ -8,7 +8,7 @@ aboutItem :
 
 - icon : tf-ion-ios-analytics
   title : Initiator
-  content : Taking direct action where I can make a postitive impact.
+  content : Taking direct action where I can make a positive impact.
 
 - icon : tf-ion-ios-pie
   title : Resourceful
