--- a/data/testimonial.yml
+++ b/data/testimonial.yml
@@ -6,7 +6,7 @@ testimonialItem :
   - name : Relectric Car Team
     image : images/team/relectric.svg
     date : August 2019 - Current
-    content : Founder and executive lead at the Schulich Relectric Car Team. I oversee the day-to-day activities of the team, coach the department leads on management styles, ane ensure our builds are on time and on budget. Additionally, I act as the liaison between the team, governing bodies, and sponors.
+    content : Founder and executive lead at the Schulich Relectric Car Team. I oversee the day-to-day activities of the team, coach the department leads on management styles, and ensure our builds are on time and on budget. Additionally, I act as the liaison between the team, governing bodies, and sponsors.
   - name : Engineering Students' Society
     image : images/team/ess.png
     date : April 2020 - Current
