--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,24 @@ title = "Ratik Kapoor"
 theme = "meghna-hugo"
 summaryLength = 10
 
+# [markup]
+#   [markup.highlight]
+#     codeFences = true
+#     guessSyntax = false
+#     hl_Lines = ""
+#     lineNoStart = 1
+#     lineNos = false
+#     lineNumbersInTable = true
+#     noClasses = true
+#     style = "syntax-dark"
+#     tabWidth = 4
+
+pygmentsUseClassic = false
+pygmentsCodefences = true
+pygmentsCodefencesGuessSyntax = true
+# pygmentsStyle = "custom"
+pygmentsUseClasses=true
+
 [taxonomies]
   author = "author"
   category = "categories"
@@ -58,6 +76,7 @@ author = "Ratik Kapoor"
 # Google Analitycs
 #googleAnalitycsID = "Your ID"
 custom_css = ["css/custom.css"]
+dark_code = ["css/syntax-dark.css"]
 
     # Contact stuff
     [params.contact]
